--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.11.1",
     "firebase-tools": "^13.11.2",
     "qrcode.react": "^3.1.0",
@@ -14,9 +15,13 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-google-button": "^0.8.0",
+    "react-icons": "^5.2.1",
     "react-iframe": "^1.8.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
+    "redux": "^5.0.1",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
