--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^10.11.1",
     "firebase-tools": "^13.11.2",
+    "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
