aaded code for the table

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.0",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "firebase-tools": "^13.11.2",
     "jotai": "^2.9.3",
+    "jszip": "^3.10.1",
     "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
     "razorpay": "^2.9.4",
